--- a/style.css
+++ b/style.css
@@ -253,11 +253,65 @@
     justify-content: space-between;
   }
 
-  .primary-navigation ul {
-    display: flex;
-    gap: 0.5rem 1rem;
-    flex-wrap: wrap;
-    list-style: none;
+  [aria-controls="primary-nav"] {
+    display: none;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    z-index: 100;
+
+    img {
+      border-radius: 0;
+    }
+  }
+
+  .primary-navigation {
+    ul {
+      display: flex;
+      gap: 0.5rem 1rem;
+      flex-wrap: wrap;
+      list-style: none;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    @media (width < 760px) {
+      display: none;
+
+      position: absolute;
+      z-index: 10;
+      top: 0;
+      right: 0;
+      font-size: var(--font-size-lg);
+      font-weight: 700;
+      font-family: var(--ff-heading);
+      background-color: var(--background-accent-main);
+      padding: 2rem;
+      border-radius: 0 0 0 var(--border-radius-3);
+
+      ul {
+        gap: 0;
+        flex-direction: column;
+      }
+
+      li + li {
+        margin-block-start: 1.5rem;
+        padding-block-start: 1.5rem;
+        border-top: 2px solid var(--background-accent-light);
+      }
+    }
+  }
+
+  @media (width < 760px) {
+    [aria-controls="primary-nav"] {
+      display: block;
+    }
+
+    [aria-expanded="true"] ~ .primary-navigation {
+      display: block;
+    }
   }
 
   .site-footer {
@@ -271,7 +325,8 @@
       color: var(--text-high-main);
     }
 
-    a:hover, a:focus-visible {
+    a:hover,
+    a:focus-visible {
       color: var(--text-brand-light);
     }
   }
