--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@view-transition {
+  navigation: auto;
+}
+
 @layer reset {
   /* the reset here */
   *,
@@ -83,6 +87,12 @@
     --clr-green-400: hsl(143, 19%, 49%);
     --clr-green-500: hsl(143, 38%, 37%);
     --clr-green-600: hsl(145, 29%, 19%);
+
+    --clr-brown-100: hsl(10, 5%, 92%);
+    --clr-brown-200: hsl(9, 7%, 85%);
+    --clr-brown-300: hsl(9, 8%, 78%);
+    --clr-brown-400: hsl(0, 6%, 72%);
+
     --clr-brown-500: hsl(10, 5%, 25%);
     --clr-brown-600: hsl(9, 7%, 21%);
     --clr-brown-700: hsl(9, 8%, 16%);
@@ -146,6 +156,31 @@
     --border-radius-1: 0.25rem;
     --border-radius-2: 0.5rem;
     --border-radius-3: 0.75rem;
+
+    @media (prefers-color-scheme: light) {
+      --text-main: var(--clr-brown-800);
+      --text-high-contrast: var(--clr-900);
+
+      --background-accent-light: var(--clr-green-600);
+      --background-accent-main: var(--clr-green-500);
+      --background-accent-dark: var(--clr-green-400);
+      --background-extra-light: var(--clr-white);
+      --background-light: var(--clr-brown-100);
+      --background-main: var(--clr-brown-200);
+      --background-dark: var(--clr-brown-300);
+      --background-extra-dark: var(--clr-brown-400);
+    }
+  }
+
+  html {
+    line-height: 1.6;
+    scroll-padding: 3rem;
+  }
+
+  @media (prefers-reduced-motion: no-preference) {
+    html {
+      scroll-behavior: smooth;
+    }
   }
 
   body {
@@ -166,6 +201,7 @@
 
   a {
     color: var(--text-high-contrast);
+    list-style: none;
   }
 
   a:hover,
@@ -179,6 +215,12 @@
 }
 
 @layer layout {
+  .flex-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+
   /* selects everything which is not a first direct child */
   .flow > * + * {
     margin-top: var(--flow-space, 1em);
@@ -187,6 +229,16 @@
   .grid-flow {
     display: grid;
     gap: var(--grid-flow-gap, 1rem);
+  }
+
+  .grid-auto-fill {
+    --auto-fill-min-col-size: 250px;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(
+      auto-fill,
+      minmax(min(var(--auto-fill-min-col-size), 100%), 1fr)
+    );
   }
 
   .equal-columns {
@@ -261,6 +313,9 @@
 
   .site-header {
     padding-block: 1rem;
+
+    overflow-x: clip;
+    position: relative;
   }
 
   .site-header__inner {
@@ -287,7 +342,6 @@
       display: flex;
       gap: 0.5rem 1rem;
       flex-wrap: wrap;
-      list-style: none;
     }
 
     a {
@@ -296,6 +350,11 @@
 
     @media (width < 760px) {
       display: none;
+      opacity: 0;
+
+      transition: opacity 1s, display 1s, translate 1s;
+      transition-behavior: allow-discrete;
+      translate: 100% 0;
 
       position: absolute;
       z-index: 10;
@@ -313,6 +372,21 @@
         flex-direction: column;
       }
 
+      li {
+        --delay: 0.5s;
+
+        translate: 50%;
+        transition: translate 1s var(--delay), opacity 1s var(--delay);
+      }
+
+      li:nth-child(2) {
+        --delay: 0.75s;
+      }
+
+      li:nth-child(3) {
+        --delay: 1s;
+      }
+
       li + li {
         margin-block-start: 1.5rem;
         padding-block-start: 1.5rem;
@@ -328,6 +402,23 @@
 
     [aria-expanded="true"] ~ .primary-navigation {
       display: block;
+      opacity: 1;
+      translate: 0 0;
+
+      @starting-style {
+        opacity: 0;
+        translate: 0 -100%;
+      }
+
+      li {
+        translate: 0 0;
+        opacity: 1;
+
+        @starting-style {
+          opacity: 0;
+          translate: 50% 0;
+        }
+      }
     }
   }
 
@@ -357,10 +448,16 @@
   .hero {
     text-align: center;
     font-size: var(--font-size-md);
-    color: var(--text-high-contrast);
+    color: var(--clr-brown-100);
     background-image: url(./assets/hero.webp);
     background-size: cover;
     background-position: center;
+
+    animation: fade-out forwards;
+    animation-timeline: view();
+    animation-range-start: exit;
+
+    /* color-scheme: dark; */
   }
 
   .hero__title {
@@ -373,12 +470,80 @@
     }
   }
 
+  .mushroom-guide {
+    --card-title-font-size: var(--font-size-lg);
+    --card-title-color: var(--text-high-contrast);
+    --card-gap: 0.75rem;
+  }
+
+  .faq-bento {
+    --card-title-color: var(--text-high-contrast);
+
+    display: grid;
+    gap: 1rem;
+    grid-template-areas:
+      "card-one"
+      "card-two"
+      "card-three"
+      "card-four";
+
+    @media (width > 600px) {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-areas:
+        "card-one   card-two"
+        "card-three card-four";
+    }
+
+    @media (width > 900px) {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-areas:
+        "card-one   card-two   card-four"
+        "card-three card-three card-four";
+    }
+
+    .card > img {
+      height: 100%;
+      object-fit: cover;
+    }
+
+    @media (width > 600px) {
+      .card:nth-child(even) > img {
+        order: 3;
+      }
+    }
+
+    .card:nth-child(1) {
+      grid-area: card-one;
+    }
+    .card:nth-child(2) {
+      grid-area: card-two;
+    }
+    .card:nth-child(3) {
+      grid-area: card-three;
+
+      @media (width > 900px) {
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: 1fr 1fr;
+
+        img {
+          grid-column: 1 / 2;
+          grid-row: 1 / 3;
+        }
+      }
+    }
+    .card:nth-child(4) {
+      grid-area: card-four;
+    }
+  }
+
   .card {
     padding: 1rem;
     background-color: var(--background-light);
     border-radius: var(--border-radius-2);
-    display: grid;
-    gap: var(--grid-flow-gap, 1rem);
+    display: flex;
+    flex-direction: column;
+    gap: var(--card-gap, 1rem);
 
     img {
       border-radius: var(--border-radius-3);
@@ -388,6 +553,45 @@
   .card__title {
     font-size: var(--card-title-font-size, var(--font-size-heading-sm));
     color: var(--card-title-color, var(--text-brand));
+  }
+
+  .card__note {
+    margin-block-start: auto;
+    background-color: var(--background-extra-light);
+    padding: 0.75rem;
+    border-radius: var(--border-radius-2);
+  }
+
+  .tag-list {
+    display: flex;
+    gap: 0.5rem;
+
+    li {
+      font-family: var(--ff-heading);
+      color: var(--text-high-contrast);
+      font-size: var(--font-size-sm);
+
+      padding: 0 0.25rem;
+      background-color: var(--tag-bg, red);
+      border-radius: var(--border-radius-1);
+    }
+
+    [data-edible="edible"] {
+      --tag-bg: var(--background-accent-main);
+    }
+    [data-edible="toxic"] {
+      --tag-bg: var(--clr-red-500);
+    }
+
+    [data-season="summer"] {
+      --tag-bg: var(--background-accent-main);
+    }
+    [data-season="spring"] {
+      --tag-bg: var(--clr-teal-500);
+    }
+    [data-season="fall"] {
+      --tag-bg: var(--clr-orange-500);
+    }
   }
 
   .button {
@@ -407,9 +611,21 @@
     color: var(--text-high-contrast);
     background-color: var(--background-accent-light);
   }
+
+  select {
+    padding: 0.5rem 1rem;
+    background-color: var(--background-accent-main);
+    border: 0;
+    border-radius: var(--border-radius-2);
+    color: var(--text-high-contrast);
+  }
 }
 
 @layer utilities {
+  [hidden] {
+    display: none;
+  }
+
   .visually-hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
@@ -465,5 +681,19 @@
   }
   .font-size-lg {
     font-size: var(--font-size-lg);
+  }
+
+  .resizing * {
+    transition: none;
+    animation: none;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
